--- a/NetCafeWeb/Views/Home/Index.cshtml
+++ b/NetCafeWeb/Views/Home/Index.cshtml
@@ -4,4 +4,4 @@
     Layout = "~/Views/Shared/MasterPage.cshtml";
 }
 
-<h1>HELLO @User.Identity.GetUserName() @User.Identity.GetUserId()</h1>
+<h1>HELLO @User.Identity.GetUserName()</h1>
