--- a/NetCafeWeb/Views/PC/Index.cshtml
+++ b/NetCafeWeb/Views/PC/Index.cshtml
@@ -50,11 +50,11 @@
                         @{
                             if (pc.PCStatus == 1)
                             {
-                                <img width="20" height="20" src = "~/Content/image/green-circle-icon-md.png" />
+                                <img width="15" height="15" src=" ~/Content/image/AvailableCircle.png" />
                             }
                             else
                             {
-                                <img width="20" height="20" src = "~/Content/image/red-47690_640.png" />
+                                <img width="15" height="15" src=" ~/Content/image/NAcircle.png" />
                             }
 
                         }
@@ -82,8 +82,8 @@
                                     <p>Status: N/A</p>
                                 }
                         </div>
-                        <button class="btn btn-info" onclick="location.href='/PC/edit/@pc.PCID'">Edit</button>
-                        <button class="btn btn-success" onclick="deletePC(@pc.PCID)">Delete</button>
+                        <button class="btn btn-success" onclick="location.href='/PC/edit/@pc.PCID'">Edit</button>
+                        <button class="btn btn-primary" onclick="deletePC(@pc.PCID)">Delete</button>
                         <style>
                             .circle:before {content: '\25CF'; font-size: 20px;}
                             .pcBasic {position:absolute; overflow:visible;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";filter:alpha(opacity=1);pointer-events:none}
