--- a/NetCafeWeb/Views/Manage/Index.cshtml
+++ b/NetCafeWeb/Views/Manage/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model NetCafeWeb.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
+    Layout = "~/Views/Shared/MasterPage.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
