--- a/NetCafeWeb/Views/Shared/MasterPage.cshtml
+++ b/NetCafeWeb/Views/Shared/MasterPage.cshtml
@@ -83,7 +83,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">NetCafe <span class="lite">Management</span></a>
+            <a href="/" class="logo">NetCafe <span class="lite">Management</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -113,7 +113,7 @@
                         {
                             <li class="sub-menu">
                                 <a href="/netcafe" class="">
-                                    <i class="icon_document_alt"></i>
+                                    <i class="fa fa-university"></i>
                                     <span>Net Management</span>
 
                                 </a>
@@ -183,7 +183,7 @@
                     {
                         <li class="sub-menu">
                             <a href="/user" class="">
-                                <i class="icon-user"></i>
+                                <i class="fa fa-users"></i>
                                 <span>User Management</span>
 
                             </a>
@@ -192,7 +192,7 @@
                     }
                     <li class="sub-menu">
                         <a href="/Order/Create" class="">
-                            <i class="icon-user"></i>
+                            <i class="fa fa-magic"></i>
                             <span>Order</span>
 
                         </a>
