--- a/NetCafeWeb/Views/User/Index.cshtml
+++ b/NetCafeWeb/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/MasterPage.cshtml";
@@ -10,7 +10,7 @@
 
 <div class="container">
     <h2>User Manager - for admin only</h2>
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Edit</th>
@@ -27,6 +27,8 @@
             @{
                 foreach (User user in users)
                 {
+                    if (!user.UserName.ToUpper().Equals(User.Identity.GetUserName().ToUpper()))
+                    {
                     <tr>
                         <td><button class="btn btn-warning" onclick="location.href='/User/edit/@user.UserID'">Edit</button></td>
                         <!--<td><button class="btn btn-danger" onclick="deleteUser(@user.UserID)">Delete</button></td>-->
@@ -36,15 +38,17 @@
                         <td>@user.IdentityNumber</td>
                         <td>@user.UserPhoneNumber</td>
                         <td>@user.Balance</td>
-                        <td>@{for (int i = 0; i < roles.Count; i++)
+                        <td>@{ for (int i = 0; i < roles.Count; i++)
                             {
                                 if (user.RoleID == roles[i].RoleID)
                                 {
                                     @roles[i].RoleName;
                                 }
                             }
-                                }</td>
+                                }
+                        </td>
                     </tr>
+                    }
                 }
             }
 
