--- a/NetCafeWeb/Views/Manage/ChangePassword.cshtml
+++ b/NetCafeWeb/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@model NetCafeWeb.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
+    //Layout = "~/Views/Shared/MasterPage.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -35,6 +36,6 @@
         </div>
     </div>
 }
-@section Scripts {
+@*@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
