--- a/NetCafeWeb/Views/NetCafe/Index.cshtml
+++ b/NetCafeWeb/Views/NetCafe/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="container">
     <h2>NetCafe Manager</h2>
     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">+ Add New Net Cafe</button>
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Edit</th>
