--- a/NetCafeWeb/Views/Shared/AuthorizeFailed.cshtml
+++ b/NetCafeWeb/Views/Shared/AuthorizeFailed.cshtml
@@ -4,6 +4,6 @@
     Layout = "~/Views/Shared/MasterPage.cshtml";
 }
 
-<h2>Perform action failed!</h2>
+<h2>Access Denied!</h2>
 <h4>@ViewData["Message"]</h4>
 
