--- a/NetCafeWeb/Views/NetCafe/Index.cshtml
+++ b/NetCafeWeb/Views/NetCafe/Index.cshtml
@@ -171,7 +171,7 @@
             type: 'POST'
         });
     }
-    function deleteNetcafe(id) {
+    function deleteNetCafe(id) {
 
         $.ajax({
             url: '/netcafe/delete',
