--- a/NetCafeWeb/Views/Order/Index.cshtml
+++ b/NetCafeWeb/Views/Order/Index.cshtml
@@ -14,7 +14,7 @@
 <h1>@ViewBag.isMember</h1>
 <div class="container">
     @*<button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">+ Add New Order</button>*@
-    <h2>Order Manager - for admin only</h2>
+    <h2>Order Manager</h2>
     <table class="table table-hover">
         <thead>
             <tr>
