add profile for user

--- a/NetCafeWeb/Views/Shared/MasterPage.cshtml
+++ b/NetCafeWeb/Views/Shared/MasterPage.cshtml
@@ -202,7 +202,7 @@
                     @if (isMember)
                     {
                         <li class="sub-menu">
-                            <a href="/user/profile/@User.Identity.GetUserName()" class="">
+                            <a href="/user/profile?username=@User.Identity.GetUserName()" class="">
                                 <i class="fa fa-user"></i>
                                 <span>View Profile</span>
                             </a>
